--- a/scss/mixins/_box-shadow.scss
+++ b/scss/mixins/_box-shadow.scss
@@ -10,14 +10,14 @@
       $result: $shadow;
     } @else {
       // Filter to avoid invalid properties for example `box-shadow: none, 1px 1px black;`
-      @for $i from 1 through length($shadow) {
+      @for $i from 1 through list.length($shadow) {
         @if list.nth($shadow, $i) != "none" and list.nth($shadow, $i) != null {
           $result: list.append($result, list.nth($shadow, $i), "comma");
         }
       }
     }
 
-    @if (length($result) > 0) {
+    @if (list.length($result) > 0) {
       box-shadow: $result;
     }
   }
