--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use "sass:math";
 @use "../settings";
 @use "../settings-options";
@@ -63,7 +64,7 @@
     @include make-col-ready();
   }
 
-  @each $breakpoint in map-keys($breakpoints) {
+  @each $breakpoint in map.keys($breakpoints) {
     $bprule: breakpoints.breakpoint-designator($breakpoint);
 
     @include breakpoints.media-breakpoint-up($breakpoint, $breakpoints) {
@@ -97,7 +98,7 @@
 
 
   // Standard columns
-  @each $breakpoint in map-keys($breakpoints) {
+  @each $breakpoint in map.keys($breakpoints) {
     $bprule: breakpoints.breakpoint-designator($breakpoint);
 
     @include breakpoints.media-breakpoint-up($breakpoint, $breakpoints) {
