--- a/scss/mixins/_transition.scss
+++ b/scss/mixins/_transition.scss
@@ -1,14 +1,15 @@
+@use "sass:list";
 @use "../settings";
 
 // stylelint-disable property-disallowed-list
 @mixin transition($transition...) {
   @if settings.$enable-transitions {
-    @if length($transition) == 0 {
+    @if list.length($transition) == 0 {
       $transition: settings.$transition-base;
     }
 
 
-    @if length($transition) > 1 {
+    @if list.length($transition) > 1 {
       @each $value in $transition {
         @if $value == null or $value == none {
           @warn "The keyword 'none' or 'null' must be used as a single argument.";
@@ -16,11 +17,11 @@
       }
     }
 
-    @if nth($transition, 1) != null {
+    @if list.nth($transition, 1) != null {
       transition: $transition;
     }
 
-    @if settings.$enable-transitions-reduced and nth($transition, 1) != null and nth($transition, 1) != none {
+    @if settings.$enable-transitions-reduced and list.nth($transition, 1) != null and list.nth($transition, 1) != none {
       @media (prefers-reduced-motion: reduce) {
         transition: none;
       }
